# sidestore_downloader

./: .gitignore  Cargo.toml  README.md  release.sh
src/: main.rs
