[package]
name = "sidestore_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_libimobiledevice = { version = "0.1.7", features = ["static", "vendored"] }
plist_plus = { version = "0.2.1", features = ["static", "vendored"] }

zip = { version = "0.6.3" }
ureq = { version = "2.5.0" }
walkdir = { version = "2.3.2" }

dialoguer = { version = "0.10.2" }